--- a/src/promptflow/tests/test_configs/recordings/test_run_operations_TestFlowRun_test_show_metrics.yaml
+++ b/src/promptflow/tests/test_configs/recordings/test_run_operations_TestFlowRun_test_show_metrics.yaml
@@ -9,8 +9,8 @@ interactions:
       Connection:
       - keep-alive
       User-Agent:
-      - promptflow-sdk/0.0.1 azure-ai-ml/1.10.0 azsdk-python-mgmt-machinelearningservices/0.1.0
-        Python/3.10.13 (Windows-10-10.0.22621-SP0)
+      - promptflow-sdk/0.0.1 promptflow/0.0.1 azure-ai-ml/1.12.1 azsdk-python-mgmt-machinelearningservices/0.1.0
+        Python/3.10.13 (Windows-10-10.0.22631-SP0)
     method: GET
     uri: https://management.azure.com/subscriptions/00000000-0000-0000-0000-000000000000/resourceGroups/00000/providers/Microsoft.MachineLearningServices/workspaces/00000
   response:
@@ -23,7 +23,7 @@ interactions:
       cache-control:
       - no-cache
       content-length:
-      - '3519'
+      - '3630'
       content-type:
       - application/json; charset=utf-8
       expires:
@@ -39,7 +39,7 @@ interactions:
       x-content-type-options:
       - nosniff
       x-request-time:
-      - '0.039'
+      - '0.020'
     status:
       code: 200
       message: OK
@@ -53,8 +53,8 @@ interactions:
       Connection:
       - keep-alive
       User-Agent:
-      - promptflow-sdk/0.0.1 azure-ai-ml/1.10.0 azsdk-python-mgmt-machinelearningservices/0.1.0
-        Python/3.10.13 (Windows-10-10.0.22621-SP0)
+      - promptflow-sdk/0.0.1 promptflow/0.0.1 azure-ai-ml/1.12.1 azsdk-python-mgmt-machinelearningservices/0.1.0
+        Python/3.10.13 (Windows-10-10.0.22631-SP0)
     method: GET
     uri: https://management.azure.com/subscriptions/00000000-0000-0000-0000-000000000000/resourceGroups/00000/providers/Microsoft.MachineLearningServices/workspaces/00000/datastores?count=30&isDefault=true&orderByAsc=false
   response:
@@ -91,7 +91,7 @@ interactions:
       x-content-type-options:
       - nosniff
       x-request-time:
-      - '0.054'
+      - '0.082'
     status:
       code: 200
       message: OK
@@ -153,7 +153,7 @@ interactions:
       x-content-type-options:
       - nosniff
       x-request-time:
-      - '0.174'
+      - '0.169'
     status:
       code: 200
       message: OK
@@ -184,21 +184,21 @@ interactions:
         "userTenantId": "00000000-0000-0000-0000-000000000000", "userName": "Zhen
         Ruan", "upn": null}, "userId": "8471f65f-aa0e-4cde-b219-0ba7a1c148bf", "token":
         null, "tokenExpiryTimeUtc": null, "error": null, "warnings": null, "revision":
-        81, "statusRevision": 2, "runUuid": "fab99b4a-07c2-4c77-8ee3-3d3a47102b4a",
+        7041, "statusRevision": 2, "runUuid": "fab99b4a-07c2-4c77-8ee3-3d3a47102b4a",
         "parentRunUuid": "1b1db1ed-46ed-4106-bf87-52e3c423b395", "rootRunUuid": "1b1db1ed-46ed-4106-bf87-52e3c423b395",
         "lastStartTimeUtc": null, "currentComputeTime": null, "computeDuration": "00:00:41.1688602",
         "effectiveStartTimeUtc": null, "lastModifiedBy": {"userObjectId": "4e60fbf3-0338-41a8-bed5-fc341be556f8",
         "userPuId": null, "userIdp": "https://sts.windows.net/00000000-0000-0000-0000-000000000000/",
         "userAltSecId": null, "userIss": "https://sts.windows.net/00000000-0000-0000-0000-000000000000/",
         "userTenantId": "00000000-0000-0000-0000-000000000000", "userName": "4cbd0e2e-aae4-4099-b4ba-94d3a4910587",
-        "upn": null}, "lastModifiedUtc": "2023-10-18T08:54:28.0243731+00:00", "duration":
+        "upn": null}, "lastModifiedUtc": "2023-11-29T08:32:04.5543138+00:00", "duration":
         "00:00:41.1688602", "cancelationReason": null, "currentAttemptId": 1, "runId":
         "4cf2d5e9-c78f-4ab8-a3ee-57675f92fb74", "parentRunId": "9bafbd52-da0f-44ca-b40c-b0ce912f083c",
         "experimentId": "ad8dde3a-73f1-49bc-ae71-c7c9b2dc1b9f", "status": "Completed",
         "startTimeUtc": "2023-06-26T03:23:05.7657269+00:00", "endTimeUtc": "2023-06-26T03:23:46.9345871+00:00",
-        "scheduleId": null, "displayName": "test_display_name_aa300d92-c038-4c1b-a91a-a92cba8c36ff",
+        "scheduleId": null, "displayName": "test_display_name_6589e584-e18c-4107-8f05-f94c77ed18ca",
         "name": null, "dataContainerId": "dcid.4cf2d5e9-c78f-4ab8-a3ee-57675f92fb74",
-        "description": "test_description_aa300d92-c038-4c1b-a91a-a92cba8c36ff", "hidden":
+        "description": "test_description_6589e584-e18c-4107-8f05-f94c77ed18ca", "hidden":
         false, "runType": "azureml.promptflow.EvaluationRun", "runTypeV2": {"orchestrator":
         null, "traits": [], "attribution": null, "computeType": "MIR_v2"}, "properties":
         {"azureml.promptflow.flow_id": "QnARelevanceEvaluation", "azureml.promptflow.flow_name":
@@ -210,7 +210,7 @@ interactions:
         "azureml.promptflow.runtime_name": "demo-mir", "azureml.promptflow.runtime_version":
         "20230614.v1", "azureml.promptflow.total_tokens": "26680"}, "parameters":
         {}, "actionUris": {}, "scriptName": null, "target": null, "uniqueChildRunComputeTargets":
-        [], "tags": {"test_tag": "aa300d92-c038-4c1b-a91a-a92cba8c36ff", "hod": "1"},
+        [], "tags": {"test_tag": "6589e584-e18c-4107-8f05-f94c77ed18ca", "hod": "1"},
         "settings": {}, "services": {}, "inputDatasets": [], "outputDatasets": [],
         "runDefinition": null, "jobSpecification": null, "primaryMetricName": null,
         "createdFrom": null, "cancelUri": null, "completeUri": null, "diagnosticsUri":
@@ -406,7 +406,7 @@ interactions:
       connection:
       - keep-alive
       content-length:
-      - '21284'
+      - '21286'
       content-type:
       - application/json; charset=utf-8
       strict-transport-security:
@@ -418,7 +418,7 @@ interactions:
       x-content-type-options:
       - nosniff
       x-request-time:
-      - '0.053'
+      - '0.044'
     status:
       code: 200
       message: OK
