Remove version limit

--- a/.github/workflows/promptflow-executor-e2e-test.yml
+++ b/.github/workflows/promptflow-executor-e2e-test.yml
@@ -90,7 +90,7 @@ jobs:
         pip install promptflow-tools
         # Pin the openai version for sdk cli tests because pf and pf-tools which support openai 1.x aren't published to PyPi
         # TODO: Remove restriction on openai version after pf-tools package which supports openai 1.x is published
-        pip install openai==0.27.10
+        pip install openai
         gci ./promptflow -Recurse | % {if ($_.Name.Contains('.whl')) {python -m pip install "$($_.FullName)"}}
         pip freeze
     - name: Azure Login
