--- a/.github/workflows/samples_tutorials_flow_deploy_azure_app_service.yml
+++ b/.github/workflows/samples_tutorials_flow_deploy_azure_app_service.yml
@@ -9,7 +9,7 @@ on:
     - cron: "48 20 * * *" # Every day starting at 4:48 BJT
   pull_request:
     branches: [ main ]
-    paths: [ examples/**, .github/workflows/samples_tutorials_flow_deploy_azure_app_service.yml, '!examples/flows/integrations/**' ]
+    paths: [ examples/**, .github/workflows/samples_tutorials_flow_deploy_azure_app_service.yml ]
   workflow_dispatch:
 
 env:
