--- a/.github/workflows/samples_tutorials_flow_deploy_create_service_with_flow.yml
+++ b/.github/workflows/samples_tutorials_flow_deploy_create_service_with_flow.yml
@@ -38,6 +38,7 @@ jobs:
         run: |
           python -m pip install --upgrade pip
           pip install -r dev_requirements.txt
+          apt-get update
           apt-get install git
       - name: Extract Steps examples/tutorials/flow-deploy/create-service-with-flow/README.md
         run: |
