--- a/.github/workflows/samples_tutorials_flow_deploy_create_service_with_flow.yml
+++ b/.github/workflows/samples_tutorials_flow_deploy_create_service_with_flow.yml
@@ -29,6 +29,8 @@ jobs:
       - name: Prepare requirements
         working-directory: examples
         run: |
+          apt-get update
+          apt-get install -y curl
           if [[ -e requirements.txt ]]; then
             python -m pip install --upgrade pip
             pip install -r requirements.txt
