--- a/.github/workflows/samples_tutorials_flow_deploy_create_service_with_flow.yml
+++ b/.github/workflows/samples_tutorials_flow_deploy_create_service_with_flow.yml
@@ -31,6 +31,7 @@ jobs:
         run: |
           apt-get update
           apt-get install -y curl
+          apt-get install -y sqlite3
           python -m pip install --upgrade pip
           pip install -r requirements.txt
       - name: Prepare dev requirements
